--- a/KreeSkrullWar/KreeSkrullWar.html
+++ b/KreeSkrullWar/KreeSkrullWar.html
@@ -2,19 +2,34 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Kree Skrull War</title>
 </head>
 
 <body>
-Kree Skrull War<br>
 <img src="KreeSkrullWar1.jpg"> <br>
-Series: 2 issues 1983<br>
-Publisher: Marvel <br>
+2 issues in 1983 by Marvel
 <p>
-The Kree-Skrull War: Starring the Avengers: Part 1 of 2 - Collects Avengers (1963-1996 1st Series) #93-94. Written by Roy Thomas. Art by Neal Adams and John Buscema. It was the most epic Avengers tale in Marvel History as two great intergalactic empires go to war with planet Earth stuck right in the middle. Can Earth's Mightiest Heroes keep their planet safe when the mighty Kree and sinister Skrulls make war? Includes an original PROLOGUE [which summarizes Avengers (1963-1996 1st Series) #89-92] starring Captain Mar-Vell by Alan Zelenetz and Walt Simonson.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="KreeSkrullWar1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KreeSkrullWar2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KreeSkrullWar3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KreeSkrullWar4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="KreeSkrullWar5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
 </p><p>
-<img src="KreeSkrullWar2.jpg">
+The Kree-Skrull War: Starring the Avengers: Part 1 of 2 - Collects Avengers (1963-1996 1st Series) #93-94. Written by Roy Thomas. Art by Neal Adams and John Buscema. It was the most epic Avengers tale in Marvel History as two great intergalactic empires go to war with planet Earth stuck right in the middle. Can Earth's Mightiest Heroes keep their planet safe when the mighty Kree and sinister Skrulls make war? Includes an original PROLOGUE [which summarizes Avengers (1963-1996 1st Series) #89-92] starring Captain Mar-Vell by Alan Zelenetz and Walt Simonson.
 </p><p>
 The Kree-Skrull War: Starring the Avengers: Part 2 of 2 - Collects Avengers (1963-1996 1st Series) #95-97. Written by Roy Thomas. Art by Neal Adams and John Buscema. The Avengers blast off into outer space to stop an intergalactic war that has spilled over and threatens to destroy planet Earth. Don't miss the exciting conclusion to the most epic Avengers tale to date!
 </p>
