--- a/index.html
+++ b/index.html
@@ -2595,6 +2595,13 @@
 </tr>
 
 <tr>
+<td>Black Hole</td>
+<td>1998</td>
+<td>Fantagraphics</td>
+<td><a href="BlackHole/BlackHole.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Knight</td>
 <td>2016</td>
 <td>Marvel</td>
