--- a/BoxersAndSaints/BoxersAndSaints.html
+++ b/BoxersAndSaints/BoxersAndSaints.html
@@ -11,6 +11,24 @@
 <img src="BoxersAndSaints.jpg"> <br>
 2 issues in 2013 by First Second Books
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="BoxersAndSaints.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BoxersAndSaints2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BoxersAndSaints3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BoxersAndSaints4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BoxersAndSaints5.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Boxers and Saints are two companion graphic novel volumes written and illustrated by Gene Luen Yang, and colored by Lark Pien. Together the two volumes have around 500 pages.
 </p><p>
 Boxers follows the story of Little Bao, a boy from Shandong (spelled "Shan-tung" in the story) who becomes a leader of the Boxer Rebellion. Saints follows the story of "Four-Girl", a girl from the same village who becomes a Catholic, adopts the name "Vibiana", and hopes to attain the glory of Joan of Arc.
