--- a/Starman/Starman.html
+++ b/Starman/Starman.html
@@ -31,6 +31,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Starman10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Starman11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Starman12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Starman13.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
