Americas Best Comics

--- a/index.html
+++ b/index.html
@@ -2356,6 +2356,13 @@
 </tr>
 
 <tr>
+<td>Best American Comics</td>
+<td>2006</td>
+<td>Houghton Mifflin</td>
+<td><a href="BestAmericanComics/BestAmericanComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Best We Could Do</td>
 <td>2017</td>
 <td>Abrams Books</td>
