Best American Comics

--- a/BestAmericanComics/BestAmericanComics.html
+++ b/BestAmericanComics/BestAmericanComics.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="BestAmericanComics1.jpg"> <br>
-15 isoughton Mifflin
+15 issure by Houghton Mifflin
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
