--- a/AlanMoore/AlanMoore.html
+++ b/AlanMoore/AlanMoore.html
@@ -33,7 +33,15 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Alan Moore (born 18 November 1953) is an English writer known primarily for his work in comic books including Watchmen, V for Vendetta, The Ballad of Halo Jones, Swamp Thing, Batman: The Killing Joke and From Hell. Regarded by some as the best comics writer in the English language, he is widely recognized among his peers and critics. He has occasionally used such pseudonyms as Curt Vile, Jill de Ray, and Translucia Baboon; also, reprints of some of his work have been credited to The Original Writer when Moore requested that his name be removed.
+Alan Moore (born 18 November 1953) is an English writer known primarily for his work in comic books including: 
+<li><a href="../Watchmen/watchmen.html">Watchmen</a>
+<li><a href="../VForVendetta/VForVendetta.html">V for Vendetta</a>
+<li><a href="../BalladOfHaloJones/BalladOfHaloJones.html">The Ballad of Halo Jones</a>
+<li><a href="../SwampThing/SwampThing.html">Swamp Thing</a>
+<li><a href="../Batman/Batman.html">Batman: The Killing Joke</a>
+<li><a href="../FromHell/FromHell.html">From Hell</a>
+</p><p>
+Regarded by some as the best comics writer in the English language, he is widely recognized among his peers and critics. He has occasionally used such pseudonyms as Curt Vile, Jill de Ray, and Translucia Baboon; also, reprints of some of his work have been credited to The Original Writer when Moore requested that his name be removed.
 </p><p>
 Moore started writing for British underground and alternative fanzines in the late 1970s before achieving success publishing comic strips in such magazines as 2000 AD and Warrior. He was subsequently picked up by the American DC Comics, and as "the first comics writer living in Britain to do prominent work in America", he worked on major characters such as Batman (Batman: The Killing Joke) and Superman (Whatever Happened to the Man of Tomorrow?), substantially developed the character Swamp Thing, and penned original titles such as Watchmen. 
 </p><p>
