--- a/EssexCounty/EssexCounty.html
+++ b/EssexCounty/EssexCounty.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Essex County</title>
 </head>
 
 <body>
-<h2>Essex County</h2>
-<img src="EssexCounty.jpg"> 
-<img src="EssexCounty1.jpg"> 
-<img src="EssexCounty2.jpg"> 
-<img src="EssexCounty3.jpg"> <br>
-Series: 3 volume graphic novels, 1 collection TPB 2008-2011<br>
-Publisher: Top Shelf Productions<br>
+<img src="EssexCounty.jpg"><br>
+3 issues and 1 collection TPB from 2008-2011 by Top Shelf Productions.
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="EssexCounty.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EssexCounty1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EssexCounty2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EssexCounty3.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Essex County Trilogy is a collection of three graphic short stories set in Essex County, Ontario by Jeff Lemire published in 2011 by Top Shelf Productions. 
 </p><p>
 The three short stories are "Tales from the Farm (2008)," "Ghost Stories (2008)," and "The Country Nurse (2009)." Two other shorter stories titled "The Essex County Boxing Club" and "The Sad and Lonely Life of Eddie Elephant Ears" are also included. The collection won the Alex Award, the Doug Wright Award, and the Joe Shuster Award It was also a 2011 selection for Canada Reads: The Essential Canadian Novels of the Decade.  In addition, Essex County provided Jeff Lemire with a Harvey Award nomination for Best New Talent in 2008.
