--- a/JamieHewlett/JamieHewlett.html
+++ b/JamieHewlett/JamieHewlett.html
@@ -34,7 +34,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Jamie Christopher Hewlett (born 3 April 1968) is an English comic creator and cover designer, best known as the co-creator of the comic book Tank Girl and the virtual band Gorillaz. After leaving college Hewlett and Martin were invited by Ewins to create material for a new magazine he was setting up with Steve Dillon in 1988.
+Jamie Christopher Hewlett (born 3 April 1968) is an English comic creator and cover designer, best known as the co-creator of the comic book <a href="../TankGirl/TankGirl.html">Tank Girl</a> and the virtual band Gorillaz. After leaving college Hewlett and Martin were invited by Ewins to create material for a new magazine he was setting up with Steve Dillon in 1988.
 </p><p>
 The magazine was called Deadline and featured a mixture of comic strips produced by British creators, and articles on music and culture. Martin and Hewlett created Tank Girl, an anarchic strip about a teenage punk girl who drove a tank and had a mutant kangaroo for a boyfriend. The strip proved instantly popular and quickly became the most talked about part of Deadline. Hewlett's eccentric style proved popular and he started to work with bands such as Senseless Things and Cud providing covers for record releases; he also contributed artwork sporadically to Commodore User magazine.
 </p>
