--- a/index.html
+++ b/index.html
@@ -2013,6 +2013,13 @@
 </tr>
 
 <tr>
+<td>Ballad of Halo Jones</td>
+<td>2005</td>
+<td>DC</td>
+<td><a href="BalladOfHaloJones/BalladOfHaloJones.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bandette</td>
 <td>2013</td>
 <td>Monkeybrain</td>
@@ -6973,6 +6980,13 @@
 </tr>
 
 <tr>
+<td>Halo Jones</td>
+<td>2005</td>
+<td>DC</td>
+<td><a href="BalladOfHaloJones/BalladOfHaloJones.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hammer</td>
 <td>1997</td>
 <td>Dark Horse</td>
@@ -8098,6 +8112,13 @@
 <td>1945</td>
 <td>Spotlight</td>
 <td><a href="SpotlightPublishers/SpotlightPublishers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jeff Lemire</td>
+<td>1976</td>
+<td>Creator</td>
+<td><a href="JeffLemire/JeffLemire.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11566,6 +11587,13 @@
 </tr>
 
 <tr>
+<td>Plutona</td>
+<td>2015</td>
+<td>Image</td>
+<td><a href="Plutona/Plutona.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pokemon</td>
 <td>1996</td>
 <td>Nintendo</td>
@@ -11861,6 +11889,13 @@
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="RIPD/RIPD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rage</td>
+<td>2011</td>
+<td>Dark Horse</td>
+<td><a href="Rage/Rage.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12193,13 +12228,6 @@
 </tr>
 
 <tr>
-<td>Rage</td>
-<td>2011</td>
-<td>Dark Horse</td>
-<td><a href="Rage/Rage.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Robert Anton Wilson</td>
 <td>1932</td>
 <td>Creator</td>
@@ -12274,6 +12302,13 @@
 <td>1969</td>
 <td>Creator</td>
 <td><a href="RoryHayes/RoryHayes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Royal City</td>
+<td>2017</td>
+<td>Image</td>
+<td><a href="RoyalCity/RoyalCity.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14041,6 +14076,13 @@
 </tr>
 
 <tr>
+<td>Tank Girl</td>
+<td>1991</td>
+<td>Dark Horse</td>
+<td><a href="TankGirl/TankGirl.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Targitt</td>
 <td>1975</td>
 <td>Atlas Seaboard</td>
@@ -14479,6 +14521,13 @@
 <td>2012</td>
 <td>Farrar, Straus, and Giroux</td>
 <td><a href="Trinity/Trinity.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Trillium</td>
+<td>2013</td>
+<td>DC</td>
+<td><a href="Trillium/Trillium.html">Details</a></td>
 </tr>
 
 <tr>
