--- a/GideonFalls/GideonFalls.html
+++ b/GideonFalls/GideonFalls.html
@@ -2,18 +2,54 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Gideon Falls</title>
 </head>
 
 <body>
-Gideon Falls<br>
 <img src="GideonFalls01.jpg"> <br>
-Series: 1 issue (so far) March 2018<br>
-Publisher: Image<br>
-Written by Jeff Lemire<br>
-Illustrations by  Andrea Sorrentino<br>
+21 issues from 2018 to 2019 by Image<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GideonFalls24.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Written by Jeff Lemire, Illustrations by  Andrea Sorrentino.
+</p><p>
 The lives of a reclusive young man obsessed with a conspiracy in the city’s trash, and a washed-up Catholic priest arriving in a small town full of dark secrets, become intertwined around the mysterious legend of The Black Barn, an otherworldly building that is alleged to have appeared in both the city and the small town, throughout history, bringing death and madness in its wake. Rural mystery and urban horror collide in this character-driven meditation on obsession, mental illness, and faith.
 </p><p>
 Gideon Falls begins by telling two stories simultaneously. One follows a young man named Norton who has developed a paranoid obsession with collecting pieces of garbage that he believes are connected to a legendary apparition known as the Black Barn. At the same time, viewers follow Father Fred, who has arrived at the titular country town of Gideon Falls to replace the recently deceased priest. While there, Fred himself starts hearing rumors about the Black Barn. In classic Lemire style, there are many secrets and tons of plot left to unfold, but right from the first issue, Gideon Falls is saturated with a horrific sense of anxiety.
