--- a/2000AD/2000AD.html
+++ b/2000AD/2000AD.html
@@ -44,7 +44,7 @@
 </p><p>
 2000 AD is a weekly British science fiction-oriented comic magazine. As a comics anthology it serialises stories in each issue (known as "progs") and was first published by IPC Magazines in 1977, the first issue dated 26 February. IPC then shifted the title to its Fleetway comics subsidiary, which was sold to Robert Maxwell in 1987 and then to Egmont UK in 1991. Fleetway continued to produce the title until 2000, when it was bought by Rebellion Developments.
 </p><p>
-2000 AD is most noted for its Judge Dredd stories, and has been contributed to by a number of artists and writers who became renowned in the field internationally, such as Alan Moore, Dave Gibbons, Grant Morrison, Brian Bolland and Mike McMahon. Other characters in 2000 AD include Rogue Trooper, Strontium Dog and the ABC Warriors.
+2000 AD is most noted for its Judge Dredd stories, and has been contributed to by a number of artists and writers who became renowned in the field internationally, such as <a href="../AlanMoore/AlanMoore.html">Alan Moore</a>, <a href="../DaveGibbons/DaveGibbons.html">Dave Gibbons</a>, <a href="../GrantMorrison/GrantMorrison.html">Grant Morrison</a>, <a href="../BrianBolland/BrianBolland.html">Brian Bolland</a> and Mike McMahon. Other characters in 2000 AD include Rogue Trooper, Strontium Dog and the ABC Warriors.
 </p><p>
 2000 AD has been a successful launchpad for getting British talent into the larger American comics market.
 
