--- a/DaveGibbons/DaveGibbons.html
+++ b/DaveGibbons/DaveGibbons.html
@@ -9,7 +9,6 @@
 
 <body>
 <img src="DaveGibbons.jpg" title="Dave Gibbons"> <br>
-
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -30,7 +29,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-David Chester Gibbons (born 1949) is an English comics artist, writer and sometimes letterer. He is best known for his collaborations with writer Alan Moore, which include the miniseries Watchmen and the Superman story "For the Man Who Has Everything". He was an artist for 2000 AD, for which he contributed a large body of work from its first issue in 1977.
+David Chester Gibbons (born 1949) is an English comics artist, writer and sometimes letterer. He is best known for his collaborations with writer Alan Moore, which include the miniseries <a href="../Watchmen/watchmen.html">Watchmen</a> and the Superman story "For the Man Who Has Everything". He was an artist for <a href="../2000AD/2000AD.html">2000 AD</a>, for which he contributed a large body of work from its first issue in 1977.
 </p><p>
 He is best known in the US for collaborating with Alan Moore on the 12-issue limited series Watchmen, now one of the best-selling graphic novels of all time, and the only one to feature on Time's "Top 100 Novels" list.
 </p>
