--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -69,7 +69,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Absorbing Man
 <li>Ace Morgan
 <li>Actor (comics)
-<li>Adam Warlock
+<li><a href="../AdamWarlock/Warlock.html">Adam Warlock</a>
 <li>Agatha Harkness
 <li>Aginar
 <li>Agon (comics)
@@ -77,7 +77,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Alicia Masters
 <li>Anelle
 <li>Annihilus
-<li>Ant-Man
+<li><a href="../Ant-Man/Ant-Man.html">Ant-Man</a>
 <li>Ares (Marvel Comics)
 <li>Arishem the Judge
 <li>Arnim Zola
@@ -97,7 +97,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Betty Ross
 <li>Big Barda
 <li>Black Bolt
-<li>Black Panther (Marvel Comics)
+<li><a href="../BlackPanther/BlackPanther.html">Black Panther</a> (Marvel Comics)
 <li>Black Racer (DC Comics)
 <li>Blastaar
 <li>Blob (comics)
@@ -116,10 +116,10 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Burner
 <li>Butterfly
 <li>Captain 3-D
-<li>Captain America
+<li><a href="../CaptainAmerica/CaptainAmerica.html">Captain America</a>
 <li>Captain Barracuda
-<li>Captain Glory
-<li>Captain Victory (comics)
+<li><a href="../CaptainGlory/CaptainGlory.html">Captain Glory</a>
+<li><a href="../CaptainVictory/CaptainVictory.html">Captain Victory</a>
 <li>Celestials (comics)
 <li>Celia Rawlings
 <li>Challengers of the Unknown
