--- a/SteveDitko/Ditko.html
+++ b/SteveDitko/Ditko.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-Steve Ditko<br>
-<img src="Ditko1.jpg"> <br>
+<img src="Ditko.jpg"> <br>
 November 2, 1927 – June 29, 2018
 <p>
 <div class="row"><div class="column">
@@ -36,13 +35,13 @@ November 2, 1927 – June 29, 2018
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Steve Ditko was an American comics artist and writer best known as the artist and co-creator, with Stan Lee, of the Marvel Comics superheroes Spider-Man and Doctor Strange.
+Steve Ditko was an American comics artist and writer best known as the artist and co-creator, with Stan Lee, of the Marvel Comics superheroes <a href="../SpiderMan/SpiderMan.html">Spider-Man</a> and <a href="../DoctorStrange/DoctorStrange.html">Doctor Strange</a>.
 </p><p>
-Ditko studied under Batman artist Jerry Robinson at the Cartoonist and Illustrators School in New York City. He began his professional career in 1953, working in the studio of Joe Simon and Jack Kirby, beginning as an inker and coming under the influence of artist Mort Meskin. During this time, he then began his long association with Charlton Comics, where he did work in the genres of science fiction, horror, and mystery. He also co-created the superhero Captain Atom in 1960.
+Ditko studied under Batman artist Jerry Robinson at the Cartoonist and Illustrators School in New York City. He began his professional career in 1953, working in the studio of Joe Simon and <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, beginning as an inker and coming under the influence of artist Mort Meskin. During this time, he then began his long association with Charlton Comics, where he did work in the genres of science fiction, horror, and mystery. He also co-created the superhero <a href="../CaptainAtom/CaptainAtom.html">Captain Atom</a> in 1960.
 </p><p>
 During the 1950s, Ditko also drew for Atlas Comics, a forerunner of Marvel Comics. He went on to contribute much significant work to Marvel. In 1966, after being the exclusive artist on The Amazing Spider-Man and the "Doctor Strange" feature in Strange Tales, Ditko left Marvel for reasons he never specified.
 </p><p>
-Ditko continued to work for Charlton and also DC Comics, including a revamp of the long-running character the Blue Beetle, and creating or co-creating the Question, the Creeper, Shade the Changing Man, and Hawk and Dove. Ditko also began contributing to small independent publishers, where he created Mr. A, a hero reflecting the influence of Ayn Rand's philosophy of Objectivism. Ditko largely declined to give interviews, saying he preferred to communicate through his work.
+Ditko continued to work for Charlton and also DC Comics, including a revamp of the long-running character the Blue Beetle, and creating or co-creating the Question, the Creeper, Shade the Changing Man, and Hawk and Dove. Ditko also began contributing to small independent publishers, where he created <a href="../MrA/MrA.html">Mr. A</a>, a hero reflecting the influence of Ayn Rand's philosophy of Objectivism. Ditko largely declined to give interviews, saying he preferred to communicate through his work.
 </p><p>
 Ditko was inducted into the comics industry's Jack Kirby Hall of Fame in 1990, and into the Will Eisner Award Hall of Fame in 1994.
 </p>
