--- a/index.html
+++ b/index.html
@@ -3196,6 +3196,13 @@
 </tr>
 
 <tr>
+<td>Captain Atom</td>
+<td>1960</td>
+<td>Charlton</td>
+<td><a href="CaptainAtom/CaptainAtom.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Britain</td>
 <td>1976</td>
 <td>Marvel</td>
@@ -6729,6 +6736,13 @@
 </tr>
 
 <tr>
+<td>Grant Morrison</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="GrantMorrison/GrantMorrison.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Grayson</td>
 <td>2017</td>
 <td>DC</td>
@@ -8238,6 +8252,13 @@
 <td>1978</td>
 <td>Creator</td>
 <td><a href="JohnKennMortensen/JohnKennMortensen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>John Romita Jr</td>
+<td>1957</td>
+<td>Creator</td>
+<td><a href="JohnRomitaJr/JohnRomitaJr.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10460,6 +10481,13 @@
 </tr>
 
 <tr>
+<td>Mr. A</td>
+<td>1967</td>
+<td>Steve Ditko</td>
+<td><a href="MrA/MrA.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ms. Marvel</td>
 <td>1977</td>
 <td>Marvel</td>
@@ -11241,6 +11269,13 @@
 <td>2000</td>
 <td>DC</td>
 <td><a href="Orion2000/Orion2000.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Osamu Tezuka</td>
+<td>1928</td>
+<td>Creator</td>
+<td><a href="OsamuTezuka/OsamuTezuka.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13646,6 +13681,13 @@
 <td>1990</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="SteeltownRockers/SteeltownRockers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Steve Dillon</td>
+<td>1962</td>
+<td>Creator</td>
+<td><a href="SteveDillon/SteveDillon.html">Details</a></td>
 </tr>
 
 <tr>
