--- a/AstroBoy/AstroBoy.html
+++ b/AstroBoy/AstroBoy.html
@@ -40,7 +40,8 @@
 </div></div>
 </p><p>
 
-Astro Boy, known in Japan by its original name Mighty Atom, is a Japanese manga series written and illustrated by Osamu Tezuka. 
+Astro Boy, known in Japan by its original name Mighty Atom, is a Japanese manga series written and illustrated by<br>
+<a href="../OsamuTezuka/OsamuTezuka.html">Osamu Tezuka</a>. 
 </p><p>
 It was serialized in Weekly Shonen Magazine from 1952 to 1968. The original 112 chapters were collected into 23 tankōbon volumes by Kodansha. The English volumes would not become available until 2002 when the rights were licensed by Dark Horse. The story follows the protagonist, Astro boy an android with human emotions who is created by Umataro Tenma after the death of his son, eventually Astro is sold to a robot circus run by Hamegg but, is saved from his servitude by Professor Ochanomizu. Astro becomes a surrogate son to Ochanomizu who creates a robotic family for Astro and helps him to live a normal life like an average human boy, whilst accompanying him on many adventures.
 </p><p>
