--- a/Avengers/Avengers.html
+++ b/Avengers/Avengers.html
@@ -10,10 +10,8 @@
 <body>
 <img src="avengers1963series001.jpg" title="cover by Jack Kirby"> 
 <img src="AvengersMovie.jpg"> <br>
-Series: Comic 1963 over 500 issues, Movie series 2012<br>
-Publisher: Marvel<br>
+Over 500 issues since 1963 by Marvel, the movie series begain in 2012
 <p>
-
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor"></div></div>
 <div id="myModal" class="modal">
@@ -132,7 +130,7 @@ The 1963 series (#1-402) ran until 1996. It started again at #1 in 1998, but the
 </p><p>
 In 1960, DC Comics launched a comic book series featuring a team of superheroes called the Justice League. Impressed by that book's strong sales, Martin Goodman, the owner of Marvel Comics predecessor Timely Comics, asked Stan Lee to create a title featuring a similar team of superheroes for Marvel.
 </p><p>
-Much like the Justice League, the Avengers were an assemblage of pre-existing superhero characters created by Stan Lee and Jack Kirby. Between 1996 and 2004, Marvel relaunched the primary Avengers title three times.
+Much like the Justice League, the Avengers were an assemblage of pre-existing superhero characters created by Stan Lee and <a href="../JackKirby/JackKirby.html">Jack Kirby</a>. Between 1996 and 2004, Marvel relaunched the primary Avengers title three times.
 </p><p>
 The Avengers vol. 2 was written by Rob Liefeld and penciled by Jim Valentino, and ran for 13 issues (Nov. 1996–Nov. 1997). The final issue, which featured a crossover with the other Heroes Reborn titles, returned the characters to the main Marvel Universe.
 </p><p>
