--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -52,7 +52,21 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Jack Kirby, born Jacob Kurtzberg, August 28, 1917 – February 6, 1994, was an American comic book artist, writer, and editor, widely regarded as one of the medium's major innovators and one of its most prolific and influential creators.
+Jack Kirby, born Jacob Kurtzberg, August 28, 1917 – February 6, 1994, was an American comic book artist, writer, and editor, widely regarded as one of the medium's major innovators and one of its most prolific and influential creators. His most famous creations include:
+</p><p>
+<li><a href="../Ant-Man/Ant-Man.html">Ant-Man</a>
+<li><a href="../Avengers/Avengers.html">Avengers</a>
+<li><a href="../BlackPanther/BlackPanther.html">Black Panther</a>
+<li><a href="../CaptainAmerica/CaptainAmerica.html">Captain America</a>
+<li><a href="../FantasticFour/FantasticFour.html">Fantastic Four</a>
+<li><a href="../Hulk/Hulk.html">Hulk</a>
+<li><a href="../IronMan/IronMan.html">Iron Man</a>
+<li><a href="../NickFury/NickFury.html">Nick Fury</a>
+<li><a href="../SilverSurfer/SilverSurfer.html">Silver Surfer</a>
+<li><a href="../MightyThor/MightyThor.html">Thor</a>
+<li><a href="../Thundarr/Thundarr.html">Thundarr the Barbarian</a>
+<li><a href="../Xmen/xmen.html">X-Men</a>
+
 </p><p>
 Kirby grew up in New York City, and learned to draw cartoon figures by tracing characters from comic strips and editorial cartoons. He entered the nascent comics industry in the 1930s, drawing various comics features under different pen names, including Jack Curtiss, before ultimately settling on Jack Kirby. In 1940, he and writer-editor Joe Simon created the highly successful superhero character Captain America for Timely Comics, predecessor of Marvel Comics. During the 1940s, Kirby, regularly teamed with Simon, created numerous characters for that company and for National Comics Publications, later to become DC Comics.
 </p><p>
@@ -85,7 +99,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Athena (Marvel Comics)
 <li>Atlas (DC Comics)
 <li>Attuma
-<li>Avengers (comics)
+<li><a href="../Avengers/Avengers.html">Avengers</a>
 <li>Awesome Android
 <li>Balder (comics)
 <li>Baron Strucker
@@ -97,7 +111,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Betty Ross
 <li>Big Barda
 <li>Black Bolt
-<li><a href="../BlackPanther/BlackPanther.html">Black Panther</a> (Marvel Comics)
+<li><a href="../BlackPanther/BlackPanther.html">Black Panther</a>
 <li>Black Racer (DC Comics)
 <li>Blastaar
 <li>Blob (comics)
@@ -118,7 +132,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Captain 3-D
 <li><a href="../CaptainAmerica/CaptainAmerica.html">Captain America</a>
 <li>Captain Barracuda
-<li><a href="../CaptainGlory/CaptainGlory.html">Captain Glory</a>
+<li>Captain Glory
 <li><a href="../CaptainVictory/CaptainVictory.html">Captain Victory</a>
 <li>Celestials (comics)
 <li>Celia Rawlings
@@ -182,7 +196,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Executioner (comics)
 <li>Fafnir (Marvel Comics)
 <li>Fandral
-<li>Fantastic Four
+<li><a href="../FantasticFour/FantasticFour.html">Fantastic Four</a>
 <li>Female Furies
 <li>Fenris Wolf (Marvel Comics)
 <li>Fighting American
@@ -246,17 +260,16 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Helmut Zemo
 <li>Hera (Marvel Comics)
 <li>Herald of Galactus
-<li>Hercules (Marvel Comics)
+<li><a href="../Hercules/Hercules.html">Hercules</a>
 <li>Hermes (Marvel Comics)
 <li>High Evolutionary
 <li>Highfather
 <li>Hijacker
 <li>Himon
-<li>Himon
 <li>Hippolyta (Marvel Comics)
 <li>Hoarfen
 <li>Hogun
-<li>Hulk
+<li><a href="../Hulk/Hulk.html">Hulk</a>
 <li>Hulk Robot
 <li>Human Torch
 <li>Iceman (Marvel Comics)
@@ -269,10 +282,10 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Impossible Man
 <li>Infant Terrible
 <li>Infinity Man
-<li>Inhumans
+<li><a href="../Inhumans/Inhumans.html">Inhumans</a>
 <li>Intergang
 <li>Invisible Woman
-<li>Iron Man
+<li><a href="../IronMan/IronMan.html">Iron Man</a>
 <li>It! The Living Colossus
 <li>Izzy Cohen
 <li>Jane Foster (comics)
@@ -297,7 +310,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Karkas (comics)
 <li>Karnak (comics)
 <li>Karnilla
-<li>Ka-Zar (comics)
+<li><a href="../KaZar/KaZar.html">Ka-Zar</a>
 <li>Khor
 <li>Kiber The Cruel
 <li>Kingo Sunen
@@ -325,7 +338,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Loki (comics)
 <li>Lord of Death
 <li>Lucifer (Marvel Comics)
-<li>Machine Man
+<li><a href="../MachineMan/MachineMan.html">Machine Man</a>
 <li>Mad Harriet
 <li>Mad Thinker
 <li>Madame X
@@ -336,7 +349,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Man-Fish
 <li>Mangog
 <li>Manhunter (comics)
-<li>Man-Thing
+<li><a href="../ManThing/ManThing.html">Man-Thing</a>
 <li>Mantis (DC Comics)
 <li>Margo Damian
 <li>Mastermind (Jason Wyngarde)
@@ -366,10 +379,10 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Morrat
 <li>Mr. Scarlet
 <li>Mutant Force
-<li>New Gods
+<li><a href="../NewGods/NewGods.html">New Gods</a>
 <li>Newsboy Legion
 <li>Nezarr the Calculator
-<li>Nick Fury
+<li><a href="../NickFury/NickFury.html">Nick Fury</a>
 <li>Nigel Pigman
 <li>Oberon (comics)
 <li>Octo-Sapien
@@ -437,8 +450,8 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Silas Mourner
 <li>Silent Fox
 <li>Silent Ones
-<li>Silver Star
-<li>Silver Surfer
+<li><a href="../SilverStar/SilverStar.html">Silver Star</a>
+<li><a href="../SilverSurfer/SilverSurfer.html">Silver Surfer</a>
 <li>Sir Porga
 <li>Skagg
 <li>Skoll
@@ -470,10 +483,11 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>The Six-Million Year Man
 <li>Thena
 <li>Thermal Man
-<li>Thing (comics)
-<li>Thor (Marvel Comics)
+<li><a href="../Thing/Thing.html">Thing</a>
+<li><a href="../MightyThor/MightyThor.html">Thor</a>
 <li>Thought Master
 <li>Thug Thatcher
+<li><a href="../Thundarr/Thundarr.html">Thundarr the Barbarian</a>
 <li>Thunderbolt Ross
 <li>Tigra (DC Comics)
 <li>Titano
@@ -522,7 +536,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li>Xantha
 <li>Xemnu
 <li>Xemu (comics)
-<li>X-Men
+<li><a href="../Xmen/xmen.html">X-Men</a>
 <li>Yancy Street Gang
 <li>Yellow-Crested Titans
 <li>Ymir (Marvel Comics)
