--- a/Thundarr/Thundarr.html
+++ b/Thundarr/Thundarr.html
@@ -9,9 +9,8 @@
 
 <body>
 <img src="Thundarr.jpg"> <br>
-Series: 21 TV episodes (2 seasons) 1980 - 1981 <br>
-Created by: Steve Gerber, Alex Toth, Jack Kirby<br>
-Producer: Ruby-Spears (ABC)<br>
+21 TV episodes (2 seasons) 1980 - 1981 by Ruby-Spears (ABC)<br>
+Created by: Steve Gerber, Alex Toth, <a href="">Jack Kirby</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
