--- a/index.html
+++ b/index.html
@@ -7842,6 +7842,13 @@
 </tr>
 
 <tr>
+<td>Inhumans</td>
+<td>1975</td>
+<td>Marvel</td>
+<td><a href="Inhumans/Inhumans.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Injustice</td>
 <td>2013</td>
 <td>DC</td>
