--- a/Ant-Man/Ant-Man.html
+++ b/Ant-Man/Ant-Man.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="Ant-ManMovie1.jpg"> <br>
-Movie in 2015 Disney. 5 issues in 2015 Marvel<br>
-Illustrator: Mark Brooks, Writer: Nick Spensor
+Movie in 2015 by Disney. 5 issues in 2015 by Marvel
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -36,7 +35,7 @@ Illustrator: Mark Brooks, Writer: Nick Spensor
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Ant-Man is the name of several fictional superheroes appearing in books published by Marvel Comics. Created by Stan Lee, Larry Lieber and Jack Kirby, Ant-Man's first appearance was in <a href="../TalesToAstonish/TalesToAstonish.html">Tales to Astonish</a> #35 (September 1962). The persona was originally the brilliant scientist Hank Pym's superhero alias after inventing a substance that can change size, but Scott Lang and Eric O'Grady also took on the mantle after the original changed his superhero identity to various other aliases, such as Giant-Man, Goliath, and Yellowjacket.
+Ant-Man is the name of several fictional superheroes appearing in books published by Marvel Comics. Created by Stan Lee, Larry Lieber and <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, Ant-Man's first appearance was in <a href="../TalesToAstonish/TalesToAstonish.html">Tales to Astonish</a> #35 (September 1962). The persona was originally the brilliant scientist Hank Pym's superhero alias after inventing a substance that can change size, but Scott Lang and Eric O'Grady also took on the mantle after the original changed his superhero identity to various other aliases, such as Giant-Man, Goliath, and Yellowjacket.
 </p><p>
 The original Ant-Man was Biophysicist and Security Operations Center expert Dr. Henry 'Hank' Pym; who decided to become a superhero after the death of his first wife Maria Trovaya, who had been a political dissident in Hungary. Falling in love with him and believing that his American citizenship would protect her, Hank and Maria traveled to Hungary shortly after their marriage to start their new life together. Unfortunately they were confronted by corrupt agents of the secret police. Hank was knocked unconscious and Maria was murdered. Pym was greatly distraught by his wife's death, and decided to do whatever he could in the future to battle injustice. After discovering a chemical substance, which he called Pym Particles, that would allow the user to alter his size, he armed himself with a helmet that could control ants. After that, Pym would shrink down to the size of an insect to become the mystery-solving Ant-Man, solving crimes and stopping criminals.
 </p><p>
