--- a/AbeSapien/AbeSapien.html
+++ b/AbeSapien/AbeSapien.html
@@ -10,7 +10,7 @@
 <body>
 <img src="AbeSapien.jpg"><br>
 9 issues, 1 TPB collection 2013, 36 issues 2013-2016 by Dark Horse<br>
-Creator: Mike Mignola <br>
+Creator: <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a><br>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
