--- a/BPRD/BPRD.html
+++ b/BPRD/BPRD.html
@@ -36,7 +36,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The Bureau for Paranormal Research and Defense (the B.P.R.D. or BPRD) is a fictional organization in the comic book work of Mike Mignola, founded by the United States and United Kingdom governments, charged with researching the occult, paranormal and supernatural, and defending against their dangers. The B.P.R.D. originally appeared in the Hellboy comics and has since been a major part of its expanded universe.
+The Bureau for Paranormal Research and Defense (the B.P.R.D. or BPRD) is a fictional organization in the comic book work of <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>, founded by the United States and United Kingdom governments, charged with researching the occult, paranormal and supernatural, and defending against their dangers. The B.P.R.D. originally appeared in the Hellboy comics and has since been a major part of its expanded universe.
 </p><p>
 In 2002, Dark Horse Comics launched the B.P.R.D. comic series, and in 2014 the Hellboy and the B.P.R.D. series. In the storyline, the B.P.R.D. was founded in 1945 by Professor Trevor Bruttenholm to combat various occult threats uncovered in operations against Nazi Germany. It initially had strong links to the United States Army Air Forces and was based at a military airbase in New Mexico, but in 1947 later relocated to a custom built facility in Fairfield, Connecticut. It maintains strong links to various branches of the US military to this day. It is a private organization that receives funding from several major governments (mostly the United States and United Kingdom, although other countries including Canada, Japan, France, and Italy have been mentioned).
 </p><p>
