--- a/BobPowell/BobPowell.html
+++ b/BobPowell/BobPowell.html
@@ -29,7 +29,8 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Bob Powell (1916 – 1967) was an American comic book artist known for his work during the 1930–1940s Golden Age of comic books, including on the features "Sheena, Queen of the Jungle" and "Mr. Mystic". He received a belated credit in 1999 for co-writing the debut of the popular feature "Blackhawk". Powell also did the pencil art for the bubble gum trading card series Mars Attacks. He officially changed his name to S. Robert Powell in 1943.
+Bob Powell (1916 – 1967) was an American comic book artist known for his work during the 1930–1940s Golden Age of comic books, including on the features <a href=
+"../Sheena/Sheena.html">Sheena, Queen of the Jungle</a> and "Mr. Mystic". He received a belated credit in 1999 for co-writing the debut of the popular feature <a href="../Blackhawk/Blackhawk.html">Blackhawk</a>. Powell also did the pencil art for the bubble gum trading card series <a href="../MarsAttacks/MarsAttacks.html">Mars Attacks</a>. He officially changed his name to S. Robert Powell in 1943.
 </p>
 </body>
 </html>
