--- a/Hellboy/Hellboy.html
+++ b/Hellboy/Hellboy.html
@@ -2,18 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Hellboy</title>
 </head>
 
 <body>
-Hellboy<br>
-<img src="Hellboy1.jpg"> 
-<img src="HellboyMovie.jpg"><br>
-Series: 1993 multi series and multi media franchise <br>
-Publisher: Dark Horse<br>
+<img src="Hellboy1.jpg"> <br>
+12 issues from 1992-2012 and a series of stand alone stories by Dark Horse<br>
 <p>
-Hellboy is a fictional superhero created by writer-artist Mike Mignola. The character first appeared in Dime Press #4 (March 1993) cover only, the San Diego Comic Con Comics #2 (August 1993) contained first full Hellboy appearance, black and white only, then
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Hellboy1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HellboyMovie.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellboy2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellboy3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellboy4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellboy5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellboy6.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Hellboy is a fictional superhero created by writer-artist <a href="../MikeMignola/MikeMignola.html">Mike Mignola</a>. The character first appeared in Dime Press #4 (March 1993) cover only, the San Diego Comic Con Comics #2 (August 1993) contained first full Hellboy appearance, black and white only, then
 Next Men #21 (December 1993) had the first appearance in a regularly published title, and has since appeared in various eponymous miniseries, one-shots and inter company crossovers.
 The first Hellboy title series in 1994 entitled Hellboy Seed of Destuction, a 4 issue mini series by Dark Horse.
 </p><p>
