--- a/Sheena/Sheena.html
+++ b/Sheena/Sheena.html
@@ -54,7 +54,7 @@ Movie: She is an ancient prophecy filfilled. A golden God child possessed with a
 </p><p>
 Sheena grew up in the African wild, raised by a mystical witch woman. When her foster mother is framed for a murder Sheena is forced to flee, helped by her ability to talk to animals and her knowledge of the jungle.
 </p><p>
-Sheena, Queen of the Jungle is a fictional American comic book jungle girl heroine, originally published primarily by Fiction House. She was the first female comic book character with her own title, with her 1937 (in Great Britain; 1938 in the United States) premiere preceding Wonder Woman #1 (cover-dated Dec. 1941). Sheena inspired a wealth of similar comic book jungle queens. She was predated in literature by Rima, the Jungle Girl, introduced in the 1904 William Henry Hudson novel Green Mansions.
+Sheena, Queen of the Jungle is a fictional American comic book jungle girl heroine, created by <a href="../BobPowell/BobPowell.html">Bob Powell</a> and originally published primarily by Fiction House. She was the first female comic book character with her own title, with her 1937 (in Great Britain; 1938 in the United States) premiere preceding Wonder Woman #1 (cover-dated Dec. 1941). Sheena inspired a wealth of similar comic book jungle queens. She was predated in literature by Rima, the Jungle Girl, introduced in the 1904 William Henry Hudson novel Green Mansions.
 </p><p>
 An orphan who grew up in the jungle, learning how to survive and thrive there, she possesses the ability to communicate with wild animals and is proficient in fighting with knives, spears, bows, and makeshift weapons. Her adventures mostly involve encounters with slave traders, evil white hunters, native Africans, and wild animals.
 </p>
