--- a/Thundarr/Thundarr.html
+++ b/Thundarr/Thundarr.html
@@ -10,7 +10,7 @@
 <body>
 <img src="Thundarr.jpg"> <br>
 21 TV episodes (2 seasons) 1980 - 1981 by Ruby-Spears (ABC)<br>
-Created by: Steve Gerber, Alex Toth, <a href="">Jack Kirby</a>
+Created by: Steve Gerber, <a href="../AlexToth/AlexToth.html">Alex Toth</a>, <a href="../JackKirby/JackKirby.html">Jack Kirby</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
