--- a/index.html
+++ b/index.html
@@ -2853,6 +2853,13 @@
 </tr>
 
 <tr>
+<td>Bob Powell</td>
+<td>1916</td>
+<td>Creator</td>
+<td><a href="BobPowell/BobPowell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bogeyman</td>
 <td>1969</td>
 <td>SFCC</td>
@@ -3361,6 +3368,13 @@
 <td>1972</td>
 <td>Marvel</td>
 <td><a href="Cat/Cat.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Catalyst Comix</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="CatalystComix/CatalystComix.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10198,6 +10212,13 @@
 <td>1962</td>
 <td>Marvel</td>
 <td><a href="MightyThor/MightyThor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mike Mignola</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="MikeMignola/MikeMignola.html">Details</a></td>
 </tr>
 
 <tr>
